[package]
name    = "cfdp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simplied CFDP protocol"
repository = "https://github.com/markmester/cfdp-simplified"
readme = "README.md"


[dependencies]
anyhow = { version = "1.0" }
async-trait = "0.1"
bit-struct = "0.3.2"
byteorder  = "~1.4"
camino     = "~1.1"
chrono = "0.4"
clap = { version = "4.5.3", features = ["derive"] }
libc = "~0.2"
log        = '~0.4'
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0"
tempfile   = "~3.3"
thiserror  = "~1.0"
tokio       = { version = "1.28.2", features = ["sync", "time", "net", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["env-filter"]}


[dev-dependencies]
rstest       = "0.15.0"
rstest_reuse = "0.5.0"
itertools = "~0.10"
tempfile  = "~3.3"
tokio     = { version = "1.28.2", features = ["parking_lot", "macros"] }

[features]
benches = []

[[bin]]
name = "cfdp-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true